[package]
name = "gibbs-mysql-spyglass"
version = "0.5.1"
authors = ["Paul LaCrosse <paul.lacrosse@gmail.com>"]

[dependencies]
pnet = "0.8.1"
mysql = { version = "*", default-features = false, features = ["socket"] }
nickel = { version = "*", git = "https://github.com/nickel-org/nickel.rs.git", features = ["unstable"] }
hyper = { version = "0.7.2", default-features = false, features = ["nightly"] }
multipart = { version = "*", git = "https://github.com/cybergeek94/multipart.git", default-features = false, features = ["client", "hyper"] }
argparse = "*"
rand = "*"
time = "*"
regex = "*"
regex_macros = "*"
log = "*"
log4rs = { version = "*", features = ["toml"] }
