[package]
authors = ["Paul LaCrosse <paul.lacrosse@gmail.com>"]
name = "spyglass"
version = "0.6.6"

[dependencies]
libc = "0.2.10"
log = "*"
pnet = "0.8.1"
regex = "*"
regex_macros = "*"
time = "*"

[dependencies.hyper]
default-features = false
features = ["nightly"]
version = "0.8.1"

[dependencies.log4rs]
features = ["toml"]
version = "*"

[dependencies.multipart]
default-features = false
features = ["client", "hyper"]
version = "0.7.0"

[dependencies.mysql]
default-features = false
features = ["socket"]
version = "2.2.1"
